feat: improve CORS configuration and allow OPTIONS requests