@@ -1,5 +1,6 @@
 package com.example.sbb.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Configuration;
@@ -22,6 +23,9 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:8080,http://localhost:5173}")
+    private String allowedOrigins;
 
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
@@ -40,6 +44,7 @@ public class SecurityConfig {
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))  // JWT 사용하므로 세션 사용 안 함
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers("/api/auth/**").permitAll()  // 인증 API는 모두 허용
+                .requestMatchers("/api/**").authenticated()  // 나머지 API는 인증 필요
                 .requestMatchers("/error").permitAll()  // 에러 페이지 허용
                 .requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll() // 정적 리소스 공통 경로 허용
                 .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll() // Swagger UI 및 OpenAPI 문서 허용
@@ -48,7 +53,8 @@ public class SecurityConfig {
                 .requestMatchers("/ws/**").permitAll() // 웹소켓 핸드셰이크 허용
                 .requestMatchers("/actuator/**").permitAll()  // Actuator (선택사항)
                 .requestMatchers("/hello").permitAll()  // 테스트 엔드포인트 허용
-                .anyRequest().authenticated()  // 나머지는 인증 필요
+                .requestMatchers("/assets/**").permitAll()  // React 빌드된 assets 허용
+                .anyRequest().permitAll()  // React Router 경로는 모두 허용 (클라이언트 사이드 라우팅)
             )
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);  // JWT 필터 추가
 
@@ -58,7 +64,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8080", "http://localhost:5173"));  // 프론트엔드 주소 (Vite 포함)
+
+        // 환경 변수에서 허용할 Origin 목록 가져오기 (쉼표로 구분)
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setExposedHeaders(List.of("Authorization"));
